// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`config.resolveAndReadConfig() should return the contents of the ".monoflowrc" if one was found up the filesystem tree 1`] = `
Object {
  "create-stubs": Object {
    "dependencies": Array [],
  },
  "create-symlinks": Object {
    "ignore": Array [],
  },
  "someMonoRcConfig": true,
}
`;

exports[`config.resolveAndReadConfig() should return the contents of the "package.json" with a mono-flow property if one was found up the filesystem tree 1`] = `
Object {
  "create-stubs": Object {
    "dependencies": Array [],
  },
  "create-symlinks": Object {
    "ignore": Array [],
  },
  "somePackageJsonConfig": true,
}
`;
